objects/JunctionObject__c.object
<CustomObject>
    <fields>
        <fullName>Hostel__c</fullName>
        <label>Hostel</label>
        <referenceTo>Hostel__c</referenceTo>
        <relationshipLabel>JunctionObjects</relationshipLabel>
        <relationshipName>JunctionObjectsHost</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <externalId>true</externalId>
        <label>Marks</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>JunctionObjects</relationshipLabel>
        <relationshipName>JunctionObjectsStud</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>JunctionObject</label>
    <nameField>
        <label>JunctionObject id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JunctionObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>